--- a/BankCustomerChurn.ipynb
+++ b/BankCustomerChurn.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNFSyJ6vQSTxggaOtLzp98k",
+      "authorship_tag": "ABX9TyOkuMYG7mngAy3Zs1H2/ne4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2949,27 +2949,30 @@
     {
       "cell_type": "code",
       "source": [
-        "print(classification_report(Y_test_rus,grid_rus.pred))"
+        "print(classification_report(Y_test_rus,grid_rus_pred))"
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 141
+          "base_uri": "https://localhost:8080/"
         },
         "id": "_hta_8ulSJ0N",
-        "outputId": "0e270a22-6159-4cce-9922-81467e66c4cf"
+        "outputId": "49679b8c-5fda-4d55-ca81-1787643d72f5"
       },
-      "execution_count": 145,
+      "execution_count": 147,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "AttributeError",
-          "evalue": "'GridSearchCV' object has no attribute 'pred'",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-145-52a01a5c6e9a>\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mclassification_report\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mY_test_rus\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mgrid_rus\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpred\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mAttributeError\u001b[0m: 'GridSearchCV' object has no attribute 'pred'"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "           0       0.73      0.76      0.75       627\n",
+            "           1       0.74      0.71      0.72       596\n",
+            "\n",
+            "    accuracy                           0.74      1223\n",
+            "   macro avg       0.74      0.73      0.73      1223\n",
+            "weighted avg       0.74      0.74      0.73      1223\n",
+            "\n"
           ]
         }
       ]
